Fix registration html

--- a/src/main/webapp/templates/product/registration.html
+++ b/src/main/webapp/templates/product/registration.html
@@ -80,26 +80,21 @@
 </div>
 
 <div class="container">
-    <div>
-        <form action="/registration" method="post">
-
-            <div class="user">
+        <div class="user">
                 <form method="post" action="/registration">
-                    <input class="user-data" type="text" required placeholder="Username" id="username"><br>
-                    <input class="user-data" type="password" required placeholder="Password"  id="password"><br>
-                    <input class="user-data" type="email" required placeholder="Email address" id="email"><br>
-                    <input class="user-data" type="text" required placeholder="First name" id="first"><br>
-                    <input class="user-data" type="text" required placeholder="Last name"  id="last"><br>
-                    <input class="user-data" type="text" required placeholder="Phone number" minlength="9" maxlength="11" size="14" id="phone">
-                    <input class="user-data" type="text" required placeholder="State" id="state">
-                    <input class="user-data" type="text" required placeholder="City" id="city">
-                    <input class="user-data" type="text" required placeholder="Address" id="address">
-                    <input class="user-data" type="text" required placeholder="Post code" minlength="4" maxlength="4" size="6"  id="postcode"><br>
+                    <input class="user-data" type="text" required placeholder="Username" id="username" name="username"><br>
+                    <input class="user-data" type="password" required placeholder="Password"  id="password" name="password">><br>
+                    <input class="user-data" type="email" required placeholder="Email address" id="email" name="email"><br>
+                    <input class="user-data" type="text" required placeholder="First name" id="first" name="first"><br>
+                    <input class="user-data" type="text" required placeholder="Last name"  id="last" name="last"><br>
+                    <input class="user-data" type="text" required placeholder="Phone number" minlength="9" maxlength="11" size="14" id="phone" name="phone">
+                    <input class="user-data" type="text" required placeholder="State" id="state" name="state">
+                    <input class="user-data" type="text" required placeholder="City" id="city" name="city">
+                    <input class="user-data" type="text" required placeholder="Address" id="address" name="address">
+                    <input class="user-data" type="text" required placeholder="Post code" minlength="4" maxlength="4" size="6"  id="postcode" name="postcode"><br>
                     <input type="submit" value="Submit">
                 </form>
-            </div>
-        </form>
-    </div>
+        </div>
 </div>
 
 
