--- a/src/main/webapp/templates/product/registration.html
+++ b/src/main/webapp/templates/product/registration.html
@@ -83,7 +83,7 @@
         <div class="user">
                 <form method="post" action="/registration">
                     <input class="user-data" type="text" required placeholder="Username" id="username" name="username"><br>
-                    <input class="user-data" type="password" required placeholder="Password"  id="password" name="password">><br>
+                    <input class="user-data" type="password" required placeholder="Password"  id="password" name="password"><br>
                     <input class="user-data" type="email" required placeholder="Email address" id="email" name="email"><br>
                     <input class="user-data" type="text" required placeholder="First name" id="first" name="first"><br>
                     <input class="user-data" type="text" required placeholder="Last name"  id="last" name="last"><br>
